tests/testcases/errors/BCE0123-1.boo
"""
BCE0123-1.boo(5,18): BCE0123: Invalid parameter type 'System.Void'.
"""
class Foo:
	def bar(i as void):
		pass